I have most elements aligned correctly without any optimization or account for breaks to smaller screen sizes.

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -14,13 +14,33 @@ header nav {
     width: 800px;
 }
 
+.nav-container {
+    width: 100%;
+    height: 20px;
+    margin: 20px 5px 40px 20px;
+    padding: 40px;
+}
+
 .hero-container {
     display: inline-block;
     margin: 0 auto;
+    padding: 20px;
+}
+
+.hero-header-container {
+    float: left;
+    width: 50%;
+    height 100%;
+}
+
+.hero-img-container {
+    float: right;
+    height: 100%;
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 5rem;
+    text-align: center;
 }
 
 button {
@@ -29,4 +49,42 @@ button {
     height: 35px;
     border: 1px solid black;
     font-size: 16px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+hr {
+    width: 100%;
+    height: 2px;
+    background: black;
+}
+
+.features-container {
+    float: left;
+    width: 50%;
+    padding: 5px;
+}
+
+.about-container {
+    float: right;
+    width: 50%;
+    padding: 5px;
+}
+
+.services-container {
+    float: left;
+    width: 33%;
+    padding: 5px;
+}
+
+.product-container {
+    float: left;
+    width: 33%;
+    padding: 5px;
+}
+
+.vision-container {
+    float: left;
+    width: 33%;
+    padding: 5px;
 }
